--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,15 @@
 .App {
   display: flex;
+  flex-direction: row;
 }
 
 .page-content {
   flex: 1;
   margin-bottom: 80px;
+}
+
+@media only screen and (max-width: 768px) {
+  .App {
+    flex-direction: column;
+  }
 }
