--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -8,3 +8,9 @@
   bottom: 0;
   border-top: 1px solid #5c5c5c;
 }
+
+@media only screen and (max-width: 1024px) {
+  .footer {
+    width: 100%;
+  }
+}
