--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -19,3 +19,53 @@
 .nav-item:hover {
   background-color: #5c5c5c;
 }
+
+/* mobile */
+.mobile-sidebar {
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+  z-index: 2;
+  border-bottom: 1px solid #5c5c5c;
+  height: 75px;
+  transition: height 0.5s ease-in-out;
+}
+.button-nav {
+  text-align: center;
+  background-color: #ffffff;
+  z-index: 1;
+  padding: 12px;
+}
+.btn {
+  width: 60px;
+  height: 50px;
+  background-color: #ffffff;
+  border: 2px solid #5c5c5c;
+  border-radius: 3px;
+  align-self: center;
+}
+.button-icon {
+  width: 100%;
+  height: 100%;
+}
+.mobile-navbar {
+  display: flex;
+  flex-direction: column;
+  transform: translateY(-110%);
+  z-index: 0;
+  transition: transform 0.5s ease-in-out;
+}
+.show-nav {
+  height: 307px;
+}
+.show-nav > .mobile-navbar {
+  transform: translateY(0);
+}
+
+.mobile-nav-item {
+  padding: 12px 16px;
+  border-top: 1px solid #5c5c5c;
+}
+.mobile-nav-item:hover {
+  background-color: #d6d6d6;
+}
