--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,14 @@
 .page-content {
   flex: 1;
   margin-bottom: 80px;
+  margin-left: 150px;
 }
 
 @media only screen and (max-width: 768px) {
   .App {
     flex-direction: column;
+  }
+  .page-content {
+    margin-left: 0px;
   }
 }
